--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,7 @@ label {
   font-size: large;
 }
 
-input[type=submit] {
+input[type=button] {
   background-color: #4CAF50;
   color: white;
   padding: 12px 20px;
@@ -66,6 +66,6 @@ input[type=submit] {
   float: right;
 }
 
-input[type=submit]:hover {
+input[type=button]:hover {
   background-color: #45a049;
 }
